# ape_type_quest

./: CMakeLists.txt  README.md
assets/: words.txt
include/: Game.h  Settings.h  Word.h
src/: CMakeLists.txt  Game.cpp  Settings.cpp  Word.cpp
